<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white_fa"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_bar" />

    <View
        android:id="@+id/dividerView"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="16dip"
        android:gravity="left|center"
        android:hint="@string/old_pass_hint"
        android:imeOptions="actionSend"
        android:inputType="textPassword"
        android:padding="10.0dip"
        android:singleLine="true"
        android:textColor="@color/gray_9"
        android:textSize="14.0dip" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:gravity="left|center"
        android:hint="@string/new_pass_hint"
        android:imeOptions="actionSend"
        android:inputType="textPassword"
        android:padding="10.0dip"
        android:singleLine="true"
        android:textColor="@color/gray_9"
        android:textSize="14.0dip" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:gravity="left|center"
        android:hint="@string/confirm_pass_hint"
        android:imeOptions="actionSend"
        android:inputType="textPassword"
        android:padding="10.0dip"
        android:singleLine="true"
        android:textColor="@color/gray_9"
        android:textSize="14.0dip" />

</LinearLayout>